Fix bug where header elements didn't align with the content.

--- a/styles.css
+++ b/styles.css
@@ -16,21 +16,32 @@ html, body {
 
 header {
     display: flex;
+    justify-content: center;
     align-items: center;
-    margin: 0 42px;
+    /* margin: 0 42px; */
     padding: 10px 0;
     background-color:rgb(67, 106, 223);
 }
 
 h1 {
-   flex: 3;
+   /* flex: 3; */
+   width: 35%;
+
+   text-align: center;
+   /* margin: 0 20px; */
+
    flex-shrink: 0;
+   max-width: 638px;
 }
 
 h2 {
-    flex: 5;
+    /* flex: 5; */
+    width: 65%;
+
+    
     text-align: center;
     flex-shrink: 0;
+    max-width: 1548px;
 
 }
 
@@ -191,13 +202,13 @@ th {
 }
 
 th:nth-child(1), td:nth-child(1) {
-    width: 45%;
+    width: 40%;
 }
 th:nth-child(2), td:nth-child(2) {
     width: 15%;
 }
 th:nth-child(3), td:nth-child(3) {
-    width: 15%;
+    width: 20%;
 }
 th:nth-child(4), td:nth-child(4) {
     width: 15%;
